contacts form added

--- a/index.html
+++ b/index.html
@@ -97,11 +97,18 @@
       рождения (не забудьте захватить паспорт). Также есть скидки для постоянных посетителей
       и больших компаний!</p>
     </div>
+  </div>
 
-    <div class="payment">
-      <img class="cards-icons" src="img/card_icons.png">
-      <button>Оплатить онлайн</button>
-    </div>
+  <div class="section">
+    <form action="submit.html" method="post">
+      <label for="title"><h2 class="div-title">Оставить заявку</h2></label>
+      <label for="name" class="form-label">Имя</label>
+      <input type="text" name="name" value="">
+      <label for="name" class="form-label">Телефон</label>
+      <input type="text" name="phone" value="">
+
+      <input type="submit"/>
+    </form>
   </div>
 
   <div class="section">
