minor fix, contacts form styled

--- a/index.html
+++ b/index.html
@@ -17,162 +17,158 @@
 </head>
 
 <body>
-  <div class="contents">
-    <div class="column-1-5"><a href="#about">О нас</a></div>
-    <div class="column-1-5"><a href="#program">Что входит в программу</a></div>
-    <div class="column-1-5"><a href="#price">Цена</a></div>
-    <div class="column-1-5"><a href="#feedback">Отзывы</a></div>
-    <div class="column-1-5"><a href="#contacts">Контакты</a></div>
-  </div>
+  <div class="wrapper">
+    <div class="contents">
+      <div class="column-1-5"><a href="#about">О нас</a></div>
+      <div class="column-1-5"><a href="#program">Что входит в программу</a></div>
+      <div class="column-1-5"><a href="#price">Цена</a></div>
+      <div class="column-1-5"><a href="#feedback">Отзывы</a></div>
+      <div class="column-1-5"><a href="#contacts">Контакты</a></div>
+    </div>
 
-  <div class="header">
-    <h1 class="text-header">VR-путешествие по Абхазии</h1>
-  </div>
+    <div class="header">
+      <h1 class="text-header">VR-путешествие по Абхазии</h1>
+    </div>
 
-  <div class="section">
-    <h2 id="about" class="div-title">О нас</h2>
-    <img class="left-image" src="img/flag.jpeg" alt="Флаг Абхазии" width="150" height="106">
-    <p>Абхазия – государство на северо-западе Закавказья, край с многотысячелетней историей,
-      воплотившейся в древних храмах и святилищах, покрытых бархатом мха старинных мостах,
-      опоясывающих бурные реки, величественных садах и дендропарках. Из любой точки страны
-      видны силуэты горных хребтов, у подножий которых простерлись буковые и дубовые леса.
-      Юго-западные границы республики – широкая полоса галечных пляжей, закрученных в изгибы
-      бухт и заливов.
-    </p>
+    <div class="section">
+      <h2 id="about" class="div-title">О нас</h2>
+      <img class="left-image" src="img/flag.jpeg" alt="Флаг Абхазии" width="150" height="106">
+      <p>Абхазия – государство на северо-западе Закавказья, край с многотысячелетней историей,
+        воплотившейся в древних храмах и святилищах, покрытых бархатом мха старинных мостах,
+        опоясывающих бурные реки, величественных садах и дендропарках. Из любой точки страны
+        видны силуэты горных хребтов, у подножий которых простерлись буковые и дубовые леса.
+        Юго-западные границы республики – широкая полоса галечных пляжей, закрученных в изгибы
+        бухт и заливов.
+      </p><br>
 
-    <p>Однако не у всех есть возможность позволить себе путешествие в Абхазию. Мы предоставляем
-    вам шанс увидеть всю красоту этой страны своими глазами и избежать трудностей, которые
-    возникают при путешествиях. Вы погрузитесь с виртуальный мир необыкновенной природы, зеленых
-    полей и водопадов, не выезжая из родного города. А если вам понравится, всегда можно сделать
-    виртуальное фото на память!</p>
-  </div>
+      <p>Однако не у всех есть возможность позволить себе путешествие в Абхазию. Мы предоставляем
+      вам шанс увидеть всю красоту этой страны своими глазами и избежать трудностей, которые
+      возникают при путешествиях. Вы погрузитесь с виртуальный мир необыкновенной природы, зеленых
+      полей и водопадов, не выезжая из родного города. А если вам понравится, всегда можно сделать
+      виртуальное фото на память!</p>
+    </div>
 
-  <div class="section">
-    <h2 id="program" class="div-title">Что входит в программу</h2>
-    <img class="right-image" src="img/vr_glasses.jpeg" alt="VR-очки" width="180" height=auto>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="section">
+      <h2 id="program" class="div-title">Что входит в программу</h2>
+      <img class="right-image" src="img/vr_glasses.jpeg" alt="VR-очки" width="180" height=auto>
+      <p>В нашей уютной современной студии вам выдадут VR-очки и проведут краткий инструктаж. После этого
+        у вас будет целый час на то, чтобы осматривать окрестности Абхазии, посещать достопримечательности и
+        наблюдать за местными животными, а самые отважные могут даже прокатиться на местном джипе.</p><br>
 
-    <p>Tortor at risus viverra adipiscing at in tellus. Praesent semper feugiat nibh sed pulvinar.
-      Gravida arcu ac tortor dignissim. A scelerisque purus semper eget duis. Eget egestas purus
-      viverra accumsan. Viverra nam libero justo laoreet sit amet cursus. A erat nam at lectus
-      urna duis convallis. Pharetra pharetra massa massa ultricies. Tellus integer feugiat
-      scelerisque varius morbi enim nunc. Ornare arcu dui vivamus arcu felis. Habitant morbi
-      tristique senectus et netus et malesuada. Venenatis tellus in metus vulputate eu. Quis ipsum
-      suspendisse ultrices gravida. Tortor posuere ac ut consequat. Enim tortor at auctor urna.
-      Diam in arcu cursus euismod quis viverra nibh cras.</p>
-  </div>
+      <p>В стоимость не входят сувениры, еда и напитки, предложенные в студии. У нас работает
+      бесплатный Wi-Fi, чтобы вы могли делиться впечатлениями с друзьями, не отходя далеко. Также есть
+      дополнительная платная услуга в виде фото на память от нашего профессионального фотографа.</p><br>
 
-  <div class="section">
-    <h2 id="price" class="div-title">Цена</h2>
-    <div class="price-blocks">
-      <div class="column-1-3">
-        <h3>Стандарт</h3>
-        <div class="price-rectangle">
-          2400 руб.
+      <p>Приготовьтесь к незабываемому приключению! </p>
+    </div>
+
+    <div class="section">
+      <h2 id="price" class="div-title">Цена</h2>
+      <div class="price-blocks">
+        <div class="column-1-3">
+          <h3>Стандарт</h3>
+          <div class="price-rectangle">
+            2400 руб.
+          </div>
+        </div>
+
+        <div class="column-1-3">
+          <h3>Студент</h3>
+          <div class="price-rectangle">
+            1900 руб.
+          </div>
+        </div>
+
+        <div class="column-1-3">
+          <h3>День Рождения</h3>
+          <div class="price-rectangle">
+            1500 руб.
+          </div>
         </div>
       </div>
 
-      <div class="column-1-3">
-        <h3>Студент</h3>
-        <div class="price-rectangle">
-          1900 руб.
+      <div class="prices-description">
+        <p>Чтобы получить скидку по тарифу "Студент", вам нужно будет предъявить студенческий билет.
+        Скидка по тарифу "День Рождения" может быть применена в течение семи дней после даты
+        рождения (не забудьте захватить паспорт). Также есть скидки для постоянных посетителей
+        и больших компаний!</p>
+      </div>
+    </div>
+
+    <div class="section">
+      <form action="submit.html" method="post">
+        <label for="title"><h2 class="div-title">Оставить заявку</h2></label><br>
+        <label for="name" class="form-label">Имя</label><br>
+        <input type="text" class="contacts-field" name="name" value=""><br>
+        <label for="name" class="form-label">Телефон</label><br>
+        <input type="text" class="contacts-field" name="phone" value=""><br>
+
+        <input type="submit" class="contacts_button" title="Отправить" value="Отправить" />
+      </form>
+    </div>
+
+    <div class="section">
+      <h2 id="feedback" class="div-title">Отзывы</h2>
+      <div class="review-1-3">
+        <div class="review-contents">
+          <img class="review-icon" src="img/person1.jpg">
+          <h3>Александр А.</h3>
+
+          <!-- stars icons -->
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+
+          <p>Мне все очень понравилось, буду рекомендовать это место своим друзьям.
+          Сделали приятную скидку по студенческому билету. В студии есть еда и напитки,
+          можно провести там свой День Рождения или любой другой праздник. Пять звезд!</p>
         </div>
       </div>
 
-      <div class="column-1-3">
-        <h3>День Рождения</h3>
-        <div class="price-rectangle">
-          1500 руб.
+      <div class="review-1-3">
+        <div class="review-contents">
+          <img class="review-icon" src="img/person2.jpg">
+          <h3>Евгения М.</h3>
+
+          <!-- stars icons -->
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+
+          <p>Отличное место! Я давно хотела побывать в Абхазии, но никак не
+          могла собраться туда поехать. И вот у меня получилось сделать это, практически не выходя
+          из дома, потому что VR-студия находится у меня в соседнем подъезде. Сняла одну звезду,
+          потому что не работал кондиционер.</p>
+        </div>
+      </div>
+
+      <div class="review-1-3">
+        <div class="review-contents">
+          <img class="review-icon" src="img/person3.jpg">
+          <h3>Юра Т.</h3>
+
+          <!-- stars icons -->
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+
+          <p>Круто &#128077;</p>
         </div>
       </div>
     </div>
 
-    <div class="prices-description">
-      <p>Чтобы получить скидку по тарифу "Студент", вам нужно будет предъявить студенческий билет.
-      Скидка по тарифу "День Рождения" может быть применена в течение семи дней после даты
-      рождения (не забудьте захватить паспорт). Также есть скидки для постоянных посетителей
-      и больших компаний!</p>
+    <div class="section">
+      <h2 id="contacts" class="div-title">Контакты</h2>
+      <p>Адрес: Тверская ул., 25, Москва, 125009</p>
+      <p>E-mail: business@vr_abhazia.ru</p>
+      <p>Часы работы: ежедневно 10:00-22:00</p>
     </div>
   </div>
-
-  <div class="section">
-    <form action="submit.html" method="post">
-      <label for="title"><h2 class="div-title">Оставить заявку</h2></label>
-      <label for="name" class="form-label">Имя</label>
-      <input type="text" name="name" value="">
-      <label for="name" class="form-label">Телефон</label>
-      <input type="text" name="phone" value="">
-
-      <input type="submit"/>
-    </form>
-  </div>
-
-  <div class="section">
-    <h2 id="feedback" class="div-title">Отзывы</h2>
-    <div class="review-1-3">
-      <div class="review-contents">
-        <img class="review-icon" src="img/person1.jpg">
-        <h3>Александр А.</h3>
-
-        <!-- stars icons -->
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-
-        <p>Мне все очень понравилось, буду рекомендовать это место своим друзьям.
-        Сделали приятную скидку по студенческому билету. В студии есть еда и напитки,
-        можно провести там свой День Рождения или любой другой праздник. Пять звезд!</p>
-      </div>
-    </div>
-
-    <div class="review-1-3">
-      <div class="review-contents">
-        <img class="review-icon" src="img/person2.jpg">
-        <h3>Евгения М.</h3>
-
-        <!-- stars icons -->
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-
-        <p>Отличное место! Я давно хотела побывать в Абхазии, но никак не
-        могла собраться туда поехать. И вот у меня получилось сделать это, практически не выходя
-        из дома, потому что VR-студия находится у меня в соседнем подъезде. Сняла одну звезду,
-        потому что не работал кондиционер.</p>
-      </div>
-    </div>
-
-    <div class="review-1-3">
-      <div class="review-contents">
-        <img class="review-icon" src="img/person3.jpg">
-        <h3>Юра Т.</h3>
-
-        <!-- stars icons -->
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-
-        <p>Круто &#128077;</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="section">
-    <h2 id="contacts" class="div-title">Контакты</h2>
-    <p>Адрес: Тверская ул., 25, Москва, 125009</p>
-    <p>E-mail: business@vr_abhazia.ru</p>
-    <p>Часы работы: ежедневно 10:00-22:00</p>
-  </div>
-
 </body>
 </html>
