extra files removed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="column-1-5"><a href="#contacts">Контакты</a></div>
     </div>
 
-    <div class="header">
+    <div class="section header">
       <h1 class="text-header">VR-путешествие по Абхазии</h1>
     </div>
 
